--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -5,7 +5,7 @@
  */
 body {
   padding-top: 56px;
-  font-family: 'Tangerine', serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .carousel-item {
