--- a/css/storymap.2.4.css
+++ b/css/storymap.2.4.css
@@ -5,7 +5,7 @@ html {
 
 body {
     height: 100%;
-    font-family: Cairo, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 14px;
 }
 #info {
@@ -19,7 +19,7 @@ body {
   background: transparent;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  font-family: "Varela Round";
+  font-family: 'Quicksand', sans-serif;
 }
 
 .cesium-viewer-cesiumWidgetContainer {
@@ -37,7 +37,7 @@ body {
 
 h1 {
     margin-top: 25%;
-    font-family: Cairo, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     color: rgba(255, 255, 255, 0.95);
     font-size: 4vw;
     text-shadow: 0 0 6px rgba(0, 0, 0, .95);
@@ -265,7 +265,7 @@ video {
 }
 
 .storymap-attribution {
-    font-family: Cairo, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     background: rgba(255, 255, 255, 0.6) !important;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
     border-radius: 2px;
@@ -287,7 +287,7 @@ video {
     top: 30px;
     display: none;
     color: #333333;
-    font-family: Cairo, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     padding: 6px 8px;
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
