--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html, body { width: 100%; height: 100%; margin: 0; background: #fff; }
 
-#mymap, #mymap2, #mymap3, #mysatellitemap, #mysatellitemap2, #mymap4  {
+#mymap, #mymap2, #mymap3, #mymap4  {
     position: fixed;
     top: 0;
     bottom: 0;
