--- a/css/webslides.css
+++ b/css/webslides.css
@@ -487,7 +487,7 @@ figure.alignleft {
 
 pre,
 code {
-  font-family: 'Varela Round'; }
+  font-family: 'Quicksand', sans-serif; }
 
 pre {
   font-size: 1.6rem;
@@ -794,7 +794,7 @@ body,
 input,
 select,
 textarea {
-  font-family: 'Varela Round';;
+  font-family: 'Quicksand', sans-serif;
   font-size: 62.5%; }
 
 body,
@@ -1070,7 +1070,7 @@ h3 [class*='bg-'] {
 /* -- Serif -- */
 .text-serif,
 h1 span {
-  font-family: 'Varela Round';; }
+  font-family: 'Quicksand', sans-serif; }
 
 /* -- h1,h2... Promo/Landings -- */
 .text-landing {
@@ -1244,29 +1244,29 @@ figure[class*='text-pull-'] {
 =========================================== */
 .text-apple,
 .bg-apple {
-   font-family: 'Varela Round'; }
+   font-family: 'Quicksand', sans-serif; }
 
 /* Ultra Light */
 @font-face {
-  font-family: 'San Francisco';
+  font-family: 'Quicksand', sans-serif;;
   font-weight: 100;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-ultralight-webfont.woff2"); }
 
 /* Thin */
 @font-face {
-  font-family: 'San Francisco';
+  font-family: 'Quicksand', sans-serif;;
   font-weight: 200;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-thin-webfont.woff2"); }
 
 /* Regular */
 @font-face {
-  font-family: 'San Francisco';
+  font-family: 'Quicksand', sans-serif;;
   font-weight: 400;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff2"); }
 
 /* Bold */
 @font-face {
-  font-family: 'San Francisco';
+  font-family: 'Quicksand', sans-serif;;
   font-weight: bold;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff2"); }
 
@@ -1609,7 +1609,7 @@ form[class*='bg-'] {
   left: 0;
   margin-left: auto;
   margin-right: auto;
-  opacity: 0;
+  opacity: 1;
   position: fixed;
   right: 0;
   width: 24.4rem;
@@ -2563,7 +2563,7 @@ cite span {
   .text-quote:before,
   .wall:before {
     content: '\201C';
-    font-family: arial, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 12rem;
     height: 5.6rem;
     left: -.8rem;
@@ -3758,7 +3758,7 @@ Slides (Counter/Arrows)
 ============================== */
 #counter,
 #navigation a {
-  color: #abc; }
+  color: rgba(0, 10, 40, 0.8); }
 
 #webslides:hover #navigation a:hover {
   background-color: rgba(0, 10, 40, 0.8);
