--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -60,3 +60,18 @@ body {
 .button:hover {
   background-color: #4f837f;
 }
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
